; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/octeontx2/af/extr_cgx.c_cgx_get_lmac_type.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/octeontx2/af/extr_cgx.c_cgx_get_lmac_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cgx = type { i32 }

@CGXX_CMRX_CFG = common dso_local global i32 0, align 4
@CGX_LMAC_TYPE_SHIFT = common dso_local global i32 0, align 4
@CGX_LMAC_TYPE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cgx*, i32)* @cgx_get_lmac_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cgx_get_lmac_type(%struct.cgx* %0, i32 %1) #0 {
  %3 = alloca %struct.cgx*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.cgx* %0, %struct.cgx** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.cgx*, %struct.cgx** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @CGXX_CMRX_CFG, align 4
  %9 = call i32 @cgx_read(%struct.cgx* %6, i32 %7, i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @CGX_LMAC_TYPE_SHIFT, align 4
  %12 = ashr i32 %10, %11
  %13 = load i32, i32* @CGX_LMAC_TYPE_MASK, align 4
  %14 = and i32 %12, %13
  ret i32 %14
}

declare dso_local i32 @cgx_read(%struct.cgx*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
